stats-service: merge fixes